--- a/Questions/Uploader/upload-questoes - Copy.html
+++ b/Questions/Uploader/upload-questoes - Copy.html
@@ -343,6 +343,31 @@
       <div class="hint">Só preenche o campo type dentro do JSON se você quiser.</div>
     </div>
 
+    <!-- ===== NOVOS CAMPOS (APENAS 2) ===== -->
+    <div class="field">
+      <label for="skillType">Skill Type</label>
+      <select id="skillType" required>
+        <option value="">— selecione —</option>
+        <option value="listening_reading">Listening &amp; Reading</option>
+        <option value="vocabulary">Vocabulary</option>
+        <option value="writing">Writing</option>
+        <option value="grammar">Grammar</option>
+        <option value="conversation">Conversation</option>
+      </select>
+      <div class="hint">Campo pedagógico: define o foco principal da questão.</div>
+    </div>
+
+    <div class="field">
+      <label for="difficulty">Difficulty</label>
+      <select id="difficulty" required>
+        <option value="">— selecione —</option>
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+      </select>
+      <div class="hint">Campo pedagógico: define a dificuldade da questão.</div>
+    </div>
+
     <div class="field full">
       <label for="json">Objeto da questão (JSON)</label>
       <textarea id="json" spellcheck="false"></textarea>
@@ -350,8 +375,9 @@
         Cole/edite aqui um objeto JSON com os campos da questão.<br>
         Exemplo básico para MCQ:
         <code>
-{"type":"mcq","prompt":"What is this?","image":"images/apple.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","grammarTag":"vocabulary-fruits","skillType":"vocabulary","difficulty":"easy"}
-        </code>
+{"type":"mcq","prompt":"What is this?","image":"images/apple.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","skillType":"vocabulary","difficulty":"easy"}
+        </code><br>
+        Observação: ao salvar/preview, o sistema garante que <code>skillType</code> e <code>difficulty</code> serão aplicados a partir dos dropdowns.
       </div>
     </div>
 
@@ -478,11 +504,29 @@
     if (btnSearch) btnSearch.disabled = !!flag;
   }
 
-    // ==== Templates rápidos para JSON ====
+  // ==== Templates rápidos para JSON ====
   const txtJson = document.getElementById('json');
+
+  function applyDropdownDefaultsToUI(skillTypeValue, difficultyValue){
+    const skillEl = document.getElementById('skillType');
+    const diffEl  = document.getElementById('difficulty');
+
+    if (skillTypeValue && Array.from(skillEl.options).some(o => o.value === skillTypeValue)){
+      skillEl.value = skillTypeValue;
+    } else if (!skillEl.value){
+      skillEl.value = "";
+    }
+
+    if (difficultyValue && Array.from(diffEl.options).some(o => o.value === difficultyValue)){
+      diffEl.value = difficultyValue;
+    } else if (!diffEl.value){
+      diffEl.value = "";
+    }
+  }
 
   // 1) MCQ
   document.getElementById('btnTemplateMcq').onclick = () => {
+    applyDropdownDefaultsToUI("vocabulary", "easy");
     txtJson.value = JSON.stringify({
       type: "mcq",
       prompt: "What is this?",
@@ -493,15 +537,13 @@
         { label: "Orange", value: "orange" },
         { label: "Grape",  value: "grape" }
       ],
-      answer: "apple",
-      grammarTag: "vocabulary-fruits",
-      skillType: "vocabulary",
-      difficulty: "easy"
+      answer: "apple"
     }, null, 2);
   };
 
   // 2) Yes/No
   document.getElementById('btnTemplateYesNo').onclick = () => {
+    applyDropdownDefaultsToUI("listening_reading", "easy");
     txtJson.value = JSON.stringify({
       type: "yesno",
       prompt: "Is this Mary?",
@@ -510,15 +552,13 @@
         { label: "Yes", value: "yes" },
         { label: "No",  value: "no"  }
       ],
-      answer: "yes",
-      grammarTag: "yesno-questions",
-      skillType: "listening",
-      difficulty: "easy"
+      answer: "yes"
     }, null, 2);
   };
 
   // 3) True/False
   document.getElementById('btnTemplateTrueFalse').onclick = () => {
+    applyDropdownDefaultsToUI("listening_reading", "easy");
     txtJson.value = JSON.stringify({
       type: "truefalse",
       prompt: "Mary visits Elizabeth.",
@@ -527,31 +567,51 @@
         { label: "True",  value: "true" },
         { label: "False", value: "false" }
       ],
-      answer: "true",
-      grammarTag: "statements",
-      skillType: "reading",
-      difficulty: "easy"
+      answer: "true"
     }, null, 2);
   };
 
   // 4) Image Choice (MCQ com imagens)
   document.getElementById('btnTemplateImageMcq').onclick = () => {
+    applyDropdownDefaultsToUI("vocabulary", "easy");
     txtJson.value = JSON.stringify({
-      type: "image_mcq",
-      prompt: "Click on Mary.",
-      options: [
-        { label: "Mary",      value: "mary",      image: "images/mary.png" },
-        { label: "Elizabeth", value: "elizabeth", image: "images/elizabeth.png" }
-      ],
-      answer: "mary",
-      grammarTag: "names",
-      skillType: "vocabulary",
-      difficulty: "easy"
-    }, null, 2);
+  "answer": "mary",
+  "difficulty": "easy",
+  "fase": "10",
+  "id": "Q_1765664627181",
+  "image": "/Level0/Unit1/data1/imagens/imagem1.png",
+  "level": "Level0",
+  "options": [
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som1.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem1.png",
+      "label": "Mary",
+      "value": "mary"
+    },
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som2.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem2.png",
+      "label": "Elizabeth",
+      "value": "elizabeth"
+    },
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som3.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem3.png",
+      "label": "Jesus",
+      "value": "jesus"
+    }
+  ],
+  "prompt": "Look. Choose.",
+  "promptAudio": "/Level0/Unit1/QA2/prompt1.mp3",
+  "skillType": "vocabulary",
+  "type": "image_mcq",
+  "unit": "Unit1"
+}, null, 2);
   };
 
   // 5) Listen & Choose
   document.getElementById('btnTemplateAudioMcq').onclick = () => {
+    applyDropdownDefaultsToUI("listening_reading", "medium");
     txtJson.value = JSON.stringify({
       type: "audio_mcq",
       prompt: "Listen and choose the correct sentence.",
@@ -560,33 +620,29 @@
         { label: "Mary visits Elizabeth.",   value: "a" },
         { label: "Elizabeth visits Mary.",   value: "b" }
       ],
-      answer: "a",
-      grammarTag: "present-simple",
-      skillType: "listening",
-      difficulty: "medium"
+      answer: "a"
     }, null, 2);
   };
 
   // 6) Fill in the blank
   document.getElementById('btnTemplateFill').onclick = () => {
+    applyDropdownDefaultsToUI("listening_reading", "easy");
     txtJson.value = JSON.stringify({
       "type": "fillblank",
-    "prompt": "Elizabeth said, \"God ___ you!\"",
-    "image": "/Level0/Unit1/DataStory/images/imagem5.png",
-    "options": [
-      { "label": "bless", "value": "bless", "audio": "/Level0/Unit1/data2/sounds/som6.mp3" },
-      { "label": "welcome", "value": "welcome", "audio": "/Level0/Unit1/data2/sounds/som3.mp3" }
-    ],
-    "answer": "bless",
-    "promptAudio": "/Level0/Unit1/QA/prompt10.mp3",
-    "grammarTag": "vocabulary-greetings",
-    "skillType": "listening",
-    "difficulty": "easy"
+      "prompt": "Elizabeth said, \"God ___ you!\"",
+      "image": "/Level0/Unit1/DataStory/images/imagem5.png",
+      "options": [
+        { "label": "bless", "value": "bless", "audio": "/Level0/Unit1/data2/sounds/som6.mp3" },
+        { "label": "welcome", "value": "welcome", "audio": "/Level0/Unit1/data2/sounds/som3.mp3" }
+      ],
+      "answer": "bless",
+      "promptAudio": "/Level0/Unit1/QA/prompt10.mp3"
     }, null, 2);
   };
 
   // 7) Order sentence
   document.getElementById('btnTemplateOrder').onclick = () => {
+    applyDropdownDefaultsToUI("grammar", "medium");
     txtJson.value = JSON.stringify({
       type: "order",
       prompt: "Put the words in order.",
@@ -595,15 +651,13 @@
       options: ["Mary", "visits", "Elizabeth"],
       // (opcional) manter também "chunks" se quiser para organização futura
       chunks: ["Mary", "visits", "Elizabeth"],
-      answer: ["Mary", "visits", "Elizabeth"],
-      grammarTag: "word-order",
-      skillType: "grammar",
-      difficulty: "medium"
+      answer: ["Mary", "visits", "Elizabeth"]
     }, null, 2);
   };
 
   // 8) Match pairs
   document.getElementById('btnTemplateMatch').onclick = () => {
+    applyDropdownDefaultsToUI("vocabulary", "medium");
     txtJson.value = JSON.stringify({
       type: "match",
       prompt: "Match the character with the description.",
@@ -617,10 +671,7 @@
           left:  { label: "Elizabeth", value: "elizabeth" },
           right: { label: "Mother of John",  value: "elizabeth" }
         }
-      ],
-      grammarTag: "relationships",
-      skillType: "vocabulary",
-      difficulty: "medium"
+      ]
     }, null, 2);
   };
 
@@ -634,8 +685,16 @@
     const typeQuick= document.getElementById('typeQuick').value;
     const jsonStr  = txtJson.value.trim();
 
+    const skillSel = document.getElementById('skillType').value;
+    const diffSel  = document.getElementById('difficulty').value;
+
     if (!levelRaw || !unitRaw || !faseRaw || !jsonStr) {
       showToast("Preencha Level, Unit, Fase e o JSON da questão antes de fazer o preview.");
+      return null;
+    }
+
+    if (!skillSel || !diffSel){
+      showToast("Selecione Skill Type e Difficulty antes de fazer o preview.");
       return null;
     }
 
@@ -674,18 +733,18 @@
       obj.type = typeQuick;
     }
 
+    // ===== GARANTE OS DOIS CAMPOS PEDAGÓGICOS =====
+    obj.skillType  = skillSel;
+    obj.difficulty = diffSel;
+
     const meta = {
       level: levelKey,
       unit:  unitKey,
       fase:  faseKey,
       questionId: obj.id,
       order: obj.order || orderNum || 1,
-      difficulty: obj.difficulty || "easy",
-      tags: {
-        grammar:   obj.grammarTag || null,
-        vocabulary: obj.vocabTag || obj.vocabularyTag || null,
-        skill:     obj.skillType || null
-      }
+      skillType: obj.skillType || null,
+      difficulty: obj.difficulty || "easy"
     };
 
     return { meta, question: obj };
@@ -728,8 +787,16 @@
     const typeQuick= document.getElementById('typeQuick').value;
     const jsonStr  = txtJson.value.trim();
 
+    const skillSel = document.getElementById('skillType').value;
+    const diffSel  = document.getElementById('difficulty').value;
+
     if (!levelRaw || !unitRaw || !faseRaw || !jsonStr) {
       showToast("Preencha Level, Unit, Fase e o JSON da questão.");
+      return;
+    }
+
+    if (!skillSel || !diffSel){
+      showToast("Selecione Skill Type e Difficulty antes de salvar.");
       return;
     }
 
@@ -772,6 +839,10 @@
     if (typeQuick && !obj.type) {
       obj.type = typeQuick;
     }
+
+    // ===== GARANTE OS DOIS CAMPOS PEDAGÓGÓGICOS =====
+    obj.skillType  = skillSel;
+    obj.difficulty = diffSel;
 
     showLoading(true);
     setStatus("<b>Status:</b> salvando questão em <code>questions/"+qId+"</code>…");
@@ -913,8 +984,8 @@
       meta.textContent =
         "ordem: " + ord +
         (q.type ? " | type: " + q.type : "") +
-        (q.grammarTag ? " | " + q.grammarTag : "") +
-        (q.difficulty ? " | " + q.difficulty : "");
+        (q.skillType ? " | skillType: " + q.skillType : "") +
+        (q.difficulty ? " | difficulty: " + q.difficulty : "");
 
       header.appendChild(idSpan);
       header.appendChild(meta);
@@ -982,6 +1053,9 @@
     } else {
       selType.value = "";
     }
+
+    // ajusta dropdowns (skillType/difficulty) com base na questão
+    applyDropdownDefaultsToUI(q.skillType || "", q.difficulty || "");
 
     txtJson.value = JSON.stringify(q, null, 2);
 
